# permutations

./: LICENSE  Permutations.hs  Permute.hs  permutations.cabal
Data/: Permutations.hs
