-- The name of the package.
name:                permutations

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.

synopsis:            Functions for working with permutations
                     and permutation specifications.

-- A longer description of the package.
description:         This library provides functions for working
                     with permutation functions and with ð›” and
                     cycle specifications of permutations.

-- URL for the project homepage or repository.
homepage:            http://github.com/BartMassey/permutations

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Bart Massey

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          bart@cs.pdx.edu

-- A copyright notice.
-- copyright:           

category:            Data

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.8


Source-repository head
    type:            git
    location:        http://github.com/BartMassey/permutations.git

Source-repository this
    type:            git
    location:        http://github.com/BartMassey/permutations.git
    tag:             v0.1

library
  -- Modules exported by the library.
  exposed-modules:     Data.Permutations
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:       base ==4.5.*
  
